--- a/team.html
+++ b/team.html
@@ -130,7 +130,7 @@
                 </div>
                 <!-- Member 6 -->
                 <div class="team-member bg-white rounded-lg shadow-lg p-6 flex flex-col items-center">
-                    <img src="img/placeholder.jpg" alt="ATIK SHAHRIAR NIROB" class="w-28 h-28 rounded-full mb-4 object-cover">
+                    <img src="img/nirob.jpg" alt="ATIK SHAHRIAR NIROB" class="w-28 h-28 rounded-full mb-4 object-cover">
                     <h3 class="text-2xl font-bold mb-1">ATIK SHAHRIAR NIROB</h3>
                     <p class="mb-1 text-gray-700"><strong>Roll:</strong> 708316</p>
                     <p class="mb-1 text-gray-700"><strong>Email:</strong> nirob@example.com</p>
