--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -316,7 +316,7 @@
     
     <!-- Copyright Footer -->
     <footer class="footer copyright-footer px-4 py-6 border-t bg-gradient-to-r from-emerald-700 to-cyan-800 text-white border-base-300">
-        <div class="w-full max-w-7xl mx-auto text-center">
+        <div class="w-full max-w-7xl mx-auto text-center flex justify-center">
             <p class="text-sm md:text-base">Copyright © 2025 - All rights reserved by NooB Programmers</p>
         </div>
     </footer>
