--- a/team.html
+++ b/team.html
@@ -102,9 +102,9 @@
                 </div>
                 <!-- Member 2 -->
                 <div class="team-member bg-white rounded-lg shadow-lg p-6 flex flex-col items-center">
-                    <img src="img/placeholder.jpg" alt="BADHON TALUKDER" class="w-28 h-28 rounded-full mb-4 object-cover">
+                    <img src="img/badhon.jpg" alt="BADHON TALUKDER" class="w-28 h-28 rounded-full mb-4 object-cover">
                     <h3 class="text-2xl font-bold mb-1">BADHON TALUKDER</h3>
-                    <p class="mb-1 text-gray-700"><strong>Roll:</strong> 708314</p>
+                    <p class="mb-1 text-gray-700"><strong>Roll:</strong> 708308</p>
                     <p class="mb-1 text-gray-700"><strong>Email:</strong> badhon@example.com</p>
                 </div>
                 <!-- Member 3 -->
